adding resume in html

--- a/helloworld/index.html
+++ b/helloworld/index.html
@@ -7,7 +7,34 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <table>
+            <thead></thead>
+            <tr>
+                <th>ID</th>
+                <th>Username</th>
+                <th>FirstName</th>
+                <th>LastName</th>
+            </tr>
+            <tbody></tbody>
+                <tr>
+                    <td>1</td>
+                    <td>mchilders</td>
+                    <td>Matthew</td>
+                    <td>Childers</td>
+                </tr>
+            <tfoot></tfoot>
+        </table>
+    </div>
+    <select>
+        <option value="" disabled selected hidden>Select State</option>
+        <option value="OH">Ohio</option>
+        <option value="KY">Kentucky</option>
+        <option value="IN">Indiana</option>
+    </select>
+    <a href="http://maxtrain.com" target="_blank">MAX Technical Training</a>
+    <input type="password" placeholder="Password">
     <h1 style="color:blue">Hello World <span style="color:green;">HTML/CSS/JavaScript</span></h1>
-    <h2>by Matthew Childers</h2>
+    <h2 style="color: indigo;">by Matthew Childers</h2>
 </body>
 </html>
