--- a/html-resume/index.html
+++ b/html-resume/index.html
@@ -5,14 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body
-        {
-            margin-left: 35px;
-            margin-right: 35px;
-            background-color: lightgray;
-        }
-    </style>
+    <link href="css/cv.css" rel="stylesheet">
 </head>
 <body>
 
@@ -27,24 +20,45 @@
             | Phone: 513-703-0376
         </p>
     </div>
+    <div id="professionalExpereience" style="text-align: left; margin-top: 35px;">
+        <span style="font-weight: bold;">Professional Experience</span>
+        <div id="applicationDeveloper">
+            <h4 style="color: royalblue;">Application Developer</h4>
+            <p style="margin-left: 20px; font-size: 14px;">
+                ➢ Conduct Spring framework maintenance regularly.
+                <br>➢ Proficiency with reading and writing using Oracle DB
+                <br>➢ Maintain security and privacy above industry standard
+                <br>➢ Effectively leverage Scrum and Agile methodologies
+                <br>➢ Design, build and maintenance of application using scripting and object-oriented languages
+            </p>
 
-    <div style="text-align: left; margin-top: 35px;">
-        <b>Professional Experience<b><hr>
+        </div>
     </div>
-
-    <div id="professionalExperience">
-            <div id="applicationDeveloper">
-                <h4 style="color: royalblue;">Application Developer</h4>
-                <p style="margin-left: 20px;">
-                    ➢ Conduct Spring framework maintenance regularly.
-                    <br>➢ Proficiency with reading and writing using Oracle DB
-                    <br>➢ Maintain security and privacy above industry standard
-                    <br>➢ Effectively leverage Scrum and Agile methodologies
-                    <br>➢ Design, build and maintenance of application using scripting and object-oriented languages
-                </p>
-
+    <div id="additionalWorkHistory" style="text-align: left; margin-top: 35px;">
+        <span style="font-weight: bold;">
+            Additional Work History<hr>
+        </span>
+        <div style="font-size: 14px;">
+            <span>
+                Collision Technician   |   BMW of Cincinnati North   Cincinnati, OH
+            </span>
+            <span style="float: right;">
+                03.17 – 09.18
+            </span>
+            <div style="margin-top: 20px;">
+                <span>
+                    Ramp Agent   |   DHL Express   Erlanger, KY
+                </span>
+                <span style="float: right;">
+                    01.16 – 02.17
+                </span>
             </div>
+        </div>
     </div>
+    <div id="Education" style="margin-top: 20px; font-weight: bold;">
+        <span style="text-align: left;">Education</span>
+    </div>
+
 
     
 </body>
