--- a/example-objects-arrays-data-structures/objects.html
+++ b/example-objects-arrays-data-structures/objects.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/objects.css">
     <script src="js/objects.js"></script>
 </head>
 
@@ -11,24 +12,23 @@
 
     <form method="post">
 
-        <div style="background: cornflowerblue; text-align: center; margin-left: 100px; margin-right: 100px;">
-
+        <div class="container">
             <div>
 
                 <h2>Javascript Login Form Validation</h2>
-
-                <form id="form_id" method="post" name="myform">
+                <form id="login" method="post" name="myform">
                     <label>User Name :</label>
                     <input type="text" name="username" id="username" />
                     <label>Password :</label>
                     <input type="password" name="password" id="password" />
                     <input type="button" value="Login" id="submit" onclick="validate()" />
                 </form>
-
+                
                 <div style="padding-top: 20px;"><br>
                     <b>Note : </b>For this demo use following username and password. <br />
-                      <b class="valid">User Name : user<br />Password : password</b>
+                    <b>User Name : user<br />Password : password</b>
                 </div>
+
             </div>
         </div>
 
