Large update to html-css-js

--- a/example-array-functions/class.html
+++ b/example-array-functions/class.html
@@ -15,7 +15,7 @@
             <input id="rating" name="rating" type="text" placeholder="Rating for class">
         </div>
         <div>
-            <button onclick="addClass()">Add</button> ||| <button onclick="remove()">Delete</button>
+            <button onclick="add()">Add</button> ||| <button onclick="remove()">Delete</button>
         </div>
     </div>
     <div>
