--- a/example-services-shared/update/vendorUpdate.html
+++ b/example-services-shared/update/vendorUpdate.html
@@ -5,51 +5,51 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../services.js"></script>
     <script src="../vendor.class.js"></script>
-    <script src="js/vendorGetById.js"></script>
+    <script src="js/vendorUpdate.js"></script>
 </head>
 <body>
     <div>
-        <input id="zId" type="number" value="1">
-        <button id="wGet">Get</button>
+        <input id="yId" type="number" value="1">
+        <button id="xGet">Get</button>
     </div>
     <table>
         <tr>
             <td>Id</td>
-            <td><input id="wId" type="number" disabled></td>
+            <td><input id="xId" type="number" disabled></td>
         </tr>
         <tr>
             <td>Code</td>
-            <td><input id="wCode" type="text" disabled></td>
+            <td><input id="xCode" type="text"></td>
         </tr>
         <tr>
             <td>Name</td>
-            <td><input id="wName" type="text" disabled></td>
+            <td><input id="xName" type="text"></td>
         </tr>
         <tr>
             <td>Address</td>
-            <td><input id="wAddress" type="text" disabled></td>
+            <td><input id="xAddress" type="text"></td>
         </tr>
         <tr>
             <td>City</td>
-            <td><input id="wCity" type="text" disabled></td>
+            <td><input id="xCity" type="text"></td>
         </tr>
         <tr>
             <td>State</td>
-            <td><input id="wState" type="text" disabled></td>
+            <td><input id="xState" type="text"></td>
         </tr>
         <tr>
             <td>Zip</td>
-            <td><input id="wZip" type="text" disabled></td>
+            <td><input id="xZip" type="text"></td>
         </tr>
         <tr>
             <td>Phone</td>
-            <td><input id="wPhone" type="text" disabled></td>
+            <td><input id="xPhone" type="text"></td>
         </tr>
         <tr>
             <td>Email</td>
-            <td><input id="wEmail" type="text" disabled></td>
+            <td><input id="xEmail" type="text"></td>
         </tr>
     </table>
-    
+    <button id="xSave">Update</button>
 </body>
 </html>
