--- a/example-services-shared/getById/vendorGetById.html
+++ b/example-services-shared/getById/vendorGetById.html
@@ -6,12 +6,13 @@
     <script src="../services.js"></script>
     <script src="../vendor.class.js"></script>
     <script src="js/vendorGetById.js"></script>
+    <script src="../parse-param.js"></script>
 </head>
 <body>
-    <div>
+    <!-- <div>
         <input id="zId" type="number" value="1">
         <button id="wGet">Get</button>
-    </div>
+    </div> -->
     <table>
         <tr>
             <td>Id</td>
@@ -50,6 +51,6 @@
             <td><input id="wEmail" type="text" disabled></td>
         </tr>
     </table>
-    
+    <a href="../getAll/vendorGetAll.html">Back to list</a>
 </body>
 </html>
