--- a/example-services-shared/update/vendorUpdate.html
+++ b/example-services-shared/update/vendorUpdate.html
@@ -6,12 +6,13 @@
     <script src="../services.js"></script>
     <script src="../vendor.class.js"></script>
     <script src="js/vendorUpdate.js"></script>
+    <script src="../parse-param.js"></script>
 </head>
 <body>
-    <div>
+    <!-- <div>
         <input id="yId" type="number" value="1">
         <button id="xGet">Get</button>
-    </div>
+    </div> -->
     <table>
         <tr>
             <td>Id</td>
